--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "build": "react-scripts build",
+    "build": "set BUILD_PATH='../build/client' && react-scripts build",
     "dev": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
