--- a/config.json
+++ b/config.json
@@ -12,30 +12,30 @@
     "evmchains": [
         {
             "ID": "C",
-            "NAME": "RABBIT TESTNET",
-            "TOKEN": "ANALOG",
+            "NAME": "BINANCE TESTNET",
+            "TOKEN": "BNB",
             "greylistdurationinsec": 86400,
             "claimintervalinsec": 1800,
-            "RPC": "https://rabbit.analog-rpc.com",
-            "CHAINID": 1807,
-            "EXPLORER": "https://rabbit.analogscan.com/",
-            "IMAGE": "https://rabbit.analogscan.com/images/analog_icon.svg",
+            "RPC": "https://data-seed-prebsc-1-s1.binance.org:8545",
+            "CHAINID": 97,
+            "EXPLORER": "https://testnet.bscscan.com",
+            "IMAGE": "https://testnet.bscscan.com/images/svg/brands/bnb.svg",
             "MAX_PRIORITY_FEE": "50000000000",
             "MAX_FEE": "100000000000",
             "DRIP_AMOUNT": 50000000000,
             "RATELIMIT": {
-                "MAX_LIMIT": 1,
-                "WINDOW_SIZE": 1440
+            "MAX_LIMIT": 1,
+            "WINDOW_SIZE": 1440
             }
-        }
+            }
     ],
     "erc20tokens": [
         {
             "ID": "ANALOGC",
             "HOSTID": "C",
-            "NAME": "Wrapped ANA",
-            "TOKEN": "WANA",
-            "CONTRACTADDRESS": "0x9C88330C8aB3Cf53EeF61F4b2E7b2eC8c1e7E164",
+            "NAME": "Ethereum Token",
+            "TOKEN": "ETH",
+            "CONTRACTADDRESS": "0x3219d6adc1923De0A18F8255d103E33c4bC2EBD9",
             "DRIP_AMOUNT": 2000000000,
             "GASLIMIT": "150000",
             "DECIMALS": 18,
@@ -43,6 +43,125 @@
                 "MAX_LIMIT": 1,
                 "WINDOW_SIZE": 1440
             }
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "Tether USD",
+            "TOKEN": "USDT",
+            "CONTRACTADDRESS": "0x4dbB8e18D2DfdC184257Fcef4a030d5918261D0a",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "BUSD Token",
+            "TOKEN": "BUSD",
+            "CONTRACTADDRESS": "0x925B46d3B22416ff56E141DCB6FDB5d43f9B32c9",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": " XRP Token",
+            "TOKEN": "XRP",
+            "CONTRACTADDRESS": "0x2F77dD67b04E2FB7Ac5EaA2BAC7666Bd91aA8e92",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "Cardano Token",
+            "TOKEN": "ADA",
+            "CONTRACTADDRESS": "0xe17AD9b47f49Fda350d2E11E8dC537f195355966",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "Polkadot Token",
+            "TOKEN": "DOT",
+            "CONTRACTADDRESS": "0xc82812f7332F0E7d05b457d1931A00582DdDa676",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "Dai Token",
+            "TOKEN": "DAI",
+            "CONTRACTADDRESS": "0xE306B70ae0E19BD3F1764239D13279dE22Db4929",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "ChainLink Token",
+            "TOKEN": "LINK",
+            "CONTRACTADDRESS": "0xe1480f74C7F260C9eA3BAffF2673E2260e5F7D25",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
+        },
+        {
+            "ID": "ANALOGC",
+            "HOSTID": "C",
+            "NAME": "BTCB Token",
+            "TOKEN": "BTCB",
+            "CONTRACTADDRESS": "0x8C9d4546Bc8c583bDD5F4c35F65709695085947F",
+            "DRIP_AMOUNT": 2000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            }
+
         }
         
       
