--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "evmchains": [
         {
             "ID": "C",
-            "NAME": "BINANCE TESTNET",
+            "NAME":"BINANCE SMART CHAIN TESTNET",
             "TOKEN": "BNB",
             "greylistdurationinsec": 86400,
             "claimintervalinsec": 1800,
@@ -20,7 +20,7 @@
             "CHAINID": 97,
             "EXPLORER": "https://testnet.bscscan.com",
            
-            "MAX_PRIORITY_FEE": "50000000000",
+            "MAX_PRIORITY_FEE":"50000000000",
             "MAX_FEE": "100000000000",
             "DRIP_AMOUNT": 500000000,
             "RATELIMIT": {
@@ -32,7 +32,7 @@
     ],
     "erc20tokens": [
         {
-            "ID": "ANALOGC",
+            "ID": "BTC",
             "HOSTID": "C",
             "NAME": "BTC Token",
             "TOKEN": "BTC",
@@ -49,7 +49,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "ETH",
             "HOSTID": "C",
             "NAME": "Ethereum Token",
             "TOKEN": "ETH",
@@ -66,7 +66,7 @@
         },
        
         {
-            "ID": "ANALOGC",
+            "ID": "USDT",
             "HOSTID": "C",
             "NAME": "Tether USD",
             "TOKEN": "USDT",
@@ -82,7 +82,7 @@
             "IMAGE":"https://s2.coinmarketcap.com/static/img/coins/64x64/825.png"
         },
         {
-            "ID": "ANALOGC",
+            "ID": "BUSD",
             "HOSTID": "C",
             "NAME": "BUSD Token",
             "TOKEN": "BUSD",
@@ -99,7 +99,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "XRP",
             "HOSTID": "C",
             "NAME": " XRP Token",
             "TOKEN": "XRP",
@@ -115,7 +115,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "ADA",
             "HOSTID": "C",
             "NAME": "Cardano Token",
             "TOKEN": "ADA",
@@ -132,7 +132,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "DOT",
             "HOSTID": "C",
             "NAME": "Polkadot Token",
             "TOKEN": "DOT",
@@ -149,7 +149,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "Shib",
             "HOSTID": "C",
             "NAME": "Shiba Token",
             "TOKEN": "Shib",
@@ -166,7 +166,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "DOGE",
             "HOSTID": "C",
             "NAME": "Dogecoin Token",
             "TOKEN": "DOGE",
@@ -183,7 +183,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "USDC",
             "HOSTID": "C",
             "NAME": "USD COIN",
             "TOKEN": "USDC",
@@ -200,7 +200,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "AVAX",
             "HOSTID": "C",
             "NAME": "Avalanche Token",
             "TOKEN": "AVAX",
@@ -217,7 +217,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "DAI",
             "HOSTID": "C",
             "NAME": "Dai Token",
             "TOKEN": "DAI",
@@ -234,7 +234,7 @@
 
         },
         {
-            "ID": "ANALOGC",
+            "ID": "LINK",
             "HOSTID": "C",
             "NAME": "ChainLink Token",
             "TOKEN": "LINK",
