--- a/config.json
+++ b/config.json
@@ -217,6 +217,21 @@
 
         },
         {
+            "ID": "UNI",
+            "HOSTID": "C",
+            "NAME": " Binance-Peg Uniswap",
+            "TOKEN": "UNI",
+            "CONTRACTADDRESS":"0xC61d8990d79a3C4Ee21E3f8b70b029fa4d5828cA",   
+            "DRIP_AMOUNT": 10000000000,
+            "GASLIMIT": "150000",
+            "DECIMALS": 18,
+            "RATELIMIT": {
+                "MAX_LIMIT": 1,
+                "WINDOW_SIZE": 1440
+            },
+            "IMAGE": "https://bscscan.com/token/images/uniswap_32.png"
+        },
+        {
             "ID": "DAI",
             "HOSTID": "C",
             "NAME": "Dai Token",
