--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,7 +1,7 @@
 {
     "banner": "/taral_logo.png",
     "apiBaseEndpointProduction": "/api/",
-    "apiBaseEndpointDevelopment": "http://143.244.129.48/api/",
+    "apiBaseEndpointDevelopment": "http://localhost:4000/api/",
     "apiTimeout": 10000,
     "CAPTCHA": {
         "siteKey": "6LeDKZ0lAAAAAE5EfkYtJ91TzeKRl5vCXolh5_zd",
