--- a/config.json
+++ b/config.json
@@ -12,11 +12,11 @@
     "evmchains": [
         {
             "ID": "C",
-            "NAME":"Wrapped ANT",
+            "NAME":" ANT",
             "TOKEN": "ANT",
             "greylistdurationinsec": 86400,
             "claimintervalinsec": 1800,
-            "RPC": "https://43.204.65.83",
+            "RPC": "https://testnet-rpc.asianscan.com",
             "CHAINID": 7890,
             "EXPLORER": "https://testnet.asianscan.com",
            
@@ -34,7 +34,7 @@
         {
             "ID": "AsianNet",
             "HOSTID": "C",
-            "NAME": "Wrapped ANT",
+            "NAME": "ANT",
             "TOKEN": "ANT",
             "CONTRACTADDRESS": "0xF75f090D66B77458fc7A4A25690e6B0D07E8cFB3",
             "DRIP_AMOUNT": 100000000,
