--- a/config.json
+++ b/config.json
@@ -34,8 +34,8 @@
         {
             "ID": "AsianNet",
             "HOSTID": "C",
-            "NAME": "ANT",
-            "TOKEN": "ANT",
+            "NAME": "WANT Token",
+            "TOKEN": "WANT",
             "CONTRACTADDRESS": "0xF75f090D66B77458fc7A4A25690e6B0D07E8cFB3",
             "DRIP_AMOUNT": 100000000,
            
