--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
         {
             "ID": "ANT",
             "HOSTID": "C",
-            "NAME": "WANT Token",
+            "NAME": "Wrapped ANT",
             "TOKEN": "WANT",
             "CONTRACTADDRESS": "0xF75f090D66B77458fc7A4A25690e6B0D07E8cFB3",
             "DRIP_AMOUNT": 100000000,
