commit chnge logo

--- a/config.json
+++ b/config.json
@@ -19,7 +19,6 @@
             "RPC": "https://testnet-rpc.asianscan.com",
             "CHAINID": 7890,
             "EXPLORER": "https://testnet.asianscan.com",
-           
             "MAX_PRIORITY_FEE":"50000000000",
             "MAX_FEE": "100000000000",
             "DRIP_AMOUNT": 500000000,
@@ -27,7 +26,7 @@
             "MAX_LIMIT": 1,
             "WINDOW_SIZE": 1440
             },
-            "IMAGE": "https://testnet.bscscan.com/images/svg/brands/bnb.svg"
+            "IMAGE": "/client/public/fav.png"
             }
     ],
     "erc20tokens": [
@@ -38,16 +37,13 @@
             "TOKEN": "WANT",
             "CONTRACTADDRESS": "0xF75f090D66B77458fc7A4A25690e6B0D07E8cFB3",
             "DRIP_AMOUNT": 100000000,
-           
             "GASLIMIT": "150000",
             "DECIMALS": 18,
             "RATELIMIT": {
                 "MAX_LIMIT": 1,
                 "WINDOW_SIZE": 1440
             },
-            "IMAGE":"https://bscscan.com/token/images/btcb_32.png"
-
+            "IMAGE":"/client/public/fav.png"
         }
-     
     ]
 }
