--- a/config.json
+++ b/config.json
@@ -12,13 +12,13 @@
     "evmchains": [
         {
             "ID": "C",
-            "NAME": "Asian Network",
-            "TOKEN": "ANT",
+            "NAME": "Global Network",
+            "TOKEN": "GBN",
             "greylistdurationinsec": 86400,
             "claimintervalinsec": 1800,
-            "RPC": "https://testnet-rpc.asianscan.com",
+            "RPC": "https://testnetrpc.gcscan.io",
             "CHAINID": 7890,
-            "EXPLORER": "https://testnet.asianscan.com",
+            "EXPLORER": "https://testnet.gcscan.io/",
             "MAX_PRIORITY_FEE":"50000000000",
             "MAX_FEE": "100000000000",
             "DRIP_AMOUNT": 500000000,
@@ -28,22 +28,8 @@
             },
             "IMAGE": "/fav.png"
             }
-    ],
-    "erc20tokens": [
-        {
-            "ID": "ANT",
-            "HOSTID": "C",
-            "NAME": "Wrapped ANT",
-            "TOKEN": "WANT",
-            "CONTRACTADDRESS": "0xF75f090D66B77458fc7A4A25690e6B0D07E8cFB3",
-            "DRIP_AMOUNT": 100000000,
-            "GASLIMIT": "150000",
-            "DECIMALS": 18,
-            "RATELIMIT": {
-                "MAX_LIMIT": 1,
-                "WINDOW_SIZE": 1440
-            },
-            "IMAGE":"/fav.png"
-        }
     ]
+   
+
+ 
 }
