--- a/config.json
+++ b/config.json
@@ -16,18 +16,17 @@
       "TOKEN": "TRL",
       "greylistdurationinsec": 86400,
       "claimintervalinsec": 1800,
-      "RPC": "http://43.204.190.189",
+      "RPC": "https://rpc.taralityscan.com",
       "CHAINID": 1205,
       "EXPLORER": "https://testnet.taralityscan.com",
-
       "MAX_PRIORITY_FEE": "50000000000",
       "MAX_FEE": "100000000000",
-      "DRIP_AMOUNT": 500000000,
+      "DRIP_AMOUNT": 10000000000,
       "RATELIMIT": {
-        "MAX_LIMIT": 1,
-        "WINDOW_SIZE": 1440
+          "MAX_LIMIT": 1,
+          "WINDOW_SIZE": 120
       },
       "IMAGE": "https://testnet.taralityscan.com/images/favicon.png"
-    }
+  }
   ]
 }
